Revision history for Git-Helpers

{{$NEXT}}

0.000006  2016-08-12 00:02:57-04:00 America/Toronto
    - Adds URI::git to deps.
    - skip remote_url() tests if Git version less than 2.7

0.000005  2016-07-27 22:40:25-04:00 America/Toronto
    - Adds a remote_url() helper.
    - Adds a travis_url() helper.

0.000004  2016-04-11 21:57:50-04:00 America/Toronto
    - Replace has_git by test_requires_git (Philippe Bruhat (BooK))

0.000003  2015-04-20 04:35:06+02:00 Europe/Berlin
    - Fixes use of Test::Git

0.000002  2015-04-19 09:29:34+02:00 Europe/Berlin
    - Requires the (currently) latest version of Test::Git

0.000001  2015-04-18 15:00:31+02:00 Europe/Berlin
    - Initial release.