@@ -1,6 +1,7 @@
 Revision history for Git-Helpers
 
 {{$NEXT}}
+    - Adds current_branch_name()
 
 0.000006  2016-08-12 00:02:57-04:00 America/Toronto
     - Adds URI::git to deps.
